--- a/registry/src/main/resources/application.yml
+++ b/registry/src/main/resources/application.yml
@@ -19,5 +19,5 @@ eureka:
        registerWithEureka: false
        fetchRegistry: false
        serviceUrl:
-           defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+           defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.hostname}:${server.port}/eureka/
 host: localhost
