--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -37,8 +37,8 @@ spring:
       publisher-confirms: true
       virtual-host: /
    redis:
-     host: 106.14.175.92
-     password: r123abc
+     host: ${r_host:127.0.0.1}
+     password: ${r_password:123456}
      port: 6379
 eureka:
   instance:
