--- a/pay-service/pom.xml
+++ b/pay-service/pom.xml
@@ -13,8 +13,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.dingey</groupId>
+            <artifactId>weixin-sdk</artifactId>
+            <version>0.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.d</groupId>
             <artifactId>api-base</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.d</groupId>
+            <artifactId>api-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -22,6 +32,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
