--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-   port: 8766
+   port: 8776
    host: localhost
 spring:
    profiles:
@@ -52,9 +52,12 @@ management:
   endpoint:
     health:
       show-details: ALWAYS
+  health:
+    elasticsearch:
+      enabled: false      
 #logback
 logging:
-  path: /logs/ptq-cloud/${spring.application.name}_${server.port}
+  path: /logs/cloud-demo/${spring.application.name}_${server.port}
   config: classpath:logback-spring.xml
   level:
     com:
