--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.7.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
     </parent>
     <groupId>com.d</groupId>
     <artifactId>cloud-demo</artifactId>
@@ -18,13 +18,15 @@
         <module>registry</module>
         <module>api-gateway</module>
         <module>api-base</module>
-        <module>admin-web</module>
+        <module>monitor</module>
         <module>goods-service</module>
         <module>order-service</module>
         <module>pay-service</module>
         <module>store-service</module>
         <module>job-service</module>
         <module>api-client</module>
+        <module>search-service</module>
+        <module>search-service</module>
     </modules>
 
     <properties>
@@ -45,7 +47,7 @@
         <pagehelper.version>4.2.1</pagehelper.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring.cloud.version>Finchley.SR2</spring.cloud.version>
+        <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -75,7 +77,7 @@
             <dependency>
                 <groupId>com.github.dingey</groupId>
                 <artifactId>kit</artifactId>
-                <version>1.6</version>
+                <version>1.7</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -91,7 +93,7 @@
             <dependency>
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin-starter-server</artifactId>
-                <version>2.0.4</version>
+                <version>2.1.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
