--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>api-client</module>
         <module>search-service</module>
         <module>search-service</module>
+        <module>gateway-zuul</module>
     </modules>
 
     <properties>
