--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <lombok.version>1.16.20</lombok.version>
         <mysql.version>5.1.44</mysql.version>
         <mybatis.starter.version>1.3.2</mybatis.starter.version>
+        <mybatis.mapper.version>0.1</mybatis.mapper.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
@@ -108,6 +109,11 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.dingey</groupId>
+                <artifactId>mybatis-mapper</artifactId>
+                <version>${mybatis.mapper.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
